# Implicit-SDF-Planner

./: .gitignore  LICENSE  README.md  build.sh
lib/: CMakeLists.txt
src/common/assign_goals/: CMakeLists.txt
src/common/assign_goals/src/: assign_goals_node.cpp
src/common/moving_obstacles/src/: moving_obstacles.cpp
src/common/odom_visualization/src/: odom_visualization.cpp
src/common/selected_points_publisher/src/: selected_points_publisher.cpp
src/common/traj_utils/: CMakeLists.txt
src/common/traj_utils/src/: planning_visualization.cpp
src/debug_assistant/: CMakeLists.txt  package.xml
src/debug_assistant/scripts/: algorithms.py  component.py  event.py  input.py  main.py  monitor.py  news.py  operations.json  render.py  ros_gol.py  surfaces.py  toros.py
src/map_manager/: CMakeLists.txt  package.xml
src/map_manager/include/map_manager/: GridMap3D.h  PCSmap_manager.h
src/map_manager/launch/: globalmap_gene.launch  pcsmap.launch
src/map_manager/param/: default.rviz
src/map_manager/src/: Gridmap3D.cpp  PCSmap_manager.cpp  globalmap_gene.cpp
src/plan_manager/: CMakeLists.txt  package.xml
src/plan_manager/config/: any_shape.rviz  config(Bendlinear_big(yaw0,pitch0,roll90)).yaml  config(CappedCone(yaw120,pitch0,roll0)).yaml  config(SmoothIntersection(yaw20,pitch50,roll0)).yaml  config(Torus_big(yaw10,pitch0,roll80)).yaml  configL.yaml  config_Bendlinear_big.yaml  config_CappedCone.yaml  config_L.yaml  config_SmoothIntersection.yaml  config_Torus_big.yaml  config_box.yaml  configbox.yaml  yourdemo.yaml
src/plan_manager/include/plan_manager/: plan_manager.hpp
src/plan_manager/launch/: demo1.launch  demo2.launch  demo3.launch  demo4.launch  demo5.launch  demo6.launch  run.launch  vissdf.launch  yourdemo.launch
src/plan_manager/map_pcds/: Bendlinear_big.pcd  CappedCone.pcd  SmoothIntersection(20,50,0).pcd  Torus.pcd  Torus_big.pcd  dot.pcd  gap.pcd  gap2.pcd  kuang.pcd  scene1.pcd  spiral0.3.pcd  vertical.pcd
src/plan_manager/scripts/: AABB.py  debugesdf.py  esdf_pointer.py  grad_viewer.py  simulator.py
src/plan_manager/src/: plan_manager.cpp  traj_server.cpp
src/planner_algorithm/: CMakeLists.txt  package.xml
src/planner_algorithm/include/planner_algorithm/: back_end_optimizer.hpp  front_end_Astar.hpp  mid_end.hpp
src/planner_algorithm/src/: back_end_optimizer.cpp  mid_end.cpp
src/sdf_vis/: CMakeLists.txt  package.xml
src/sdf_vis/scripts/: main.py
src/swept_volume/: CMakeLists.txt  package.xml
src/swept_volume/include/swept_volume/: sw_calculate.hpp  sw_manager.hpp
src/swept_volume/src/: sw_calculate.cpp
src/uav_simulator/fake_drone/src/: poscmd_2_odom.cpp
src/uav_simulator/local_sensing/src/: pcl_render_node.cpp
src/uav_simulator/mockamap/src/: ces_randommap.cpp  mockamap.cpp
src/utils/: CMakeLists.txt  package.xml
src/utils/cmake/: FindLIBIGL.cmake
src/utils/include/igl/copyleft/cgal/: extract_cells.h
src/utils/include/lmbm/: Makefile  lmbm.cpp  lmbm.h  lmbm_call.f  lmbm_main.f  lmbm_math.f  lmbm_sub.f  lmbm_test.f
src/utils/include/utils/: Shape.hpp  Visualization.hpp  config.hpp  debug_publisher.hpp  flatness.hpp  lbfgs.hpp  minco.hpp  path.hpp  root_finder.hpp  se3_state.hpp  trajectory.hpp
src/utils/msg/: debug.msg
src/utils/src/: Shape.cpp  debug_publisher.cpp
